Remerge Issue 107 - move fetch button and update local status (#162)
* adding bug report & feature request templates

* Delete bug_report.md

* Delete feature_request.md

* rebased master, squashed merge commits and added stashing functionality: stash drop functional, stash branch and stash show prototyped, stashing modal updated, repoPath length overload fixed, modal text now updates properly

preparing merge

* Improve UX and fix stash list items becoming anchors

* Improve stash show modal

* rebased with improve-stash

* fixed rebase and added issue2 hotfix

* Add comments to git.ts

* Add comments to authenticate.ts, gitCommands.ts, images.ts, and readCredentials.ts

* Added comments in file.ts and graph.panel.component.ts

* Added comments in authenticate.ts, graphing.ts and wiki.ts

* Added comments in graphSetup.ts

* moved fetch button to top bar, made status display both ahead and behind

* added fetch message to local status, removed css styling from previous fetch button

* fixed confusing modal update on fetch completion

* rebased with master and fixed status appearing

* fixed rebase issue

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -580,35 +580,6 @@ body .footer .status-panel {
   border-style: solid;
 }
 
-body .footer .status-panel .fetch-button-wrapper {
-  /* positioned relative to its normal position(bottom left corner) */
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  border: 0;
-}
-
-body .footer .status-panel .fetch-button-wrapper .fetch-button {
-  /*sequences of white space are collapsed and lines are broken at newline characters*/
-  white-space: pre-line;
-  position: static;
-  display: block;
-  margin: 8px;
-
-  height: 40px;
-  border-radius: 10px;
-  border: 0;
-  padding: 0 15px;
-  background-color: #39c0ba;
-  color: #fff;
-}
-
-body .footer .status-panel .fetch-button:hover {
-  opacity: 0.8;
-}
-
 body .footer .terminal .git-command {
   margin: 10px;
 }
@@ -1027,7 +998,7 @@ in the model that pops-up when you click on a node */
 
 #tagDiv table {
  margin:2px;
-} 
+}
 .error {
   background-color: #fce4e4;
   border: 1px solid #cc0033;
@@ -1246,6 +1217,7 @@ body .pull-request-panel {
   margin-left: 10px;
 }
 
+
 .stash-item {
   display: inline-flex;
   align-items: center;
@@ -1330,4 +1302,19 @@ body .pull-request-panel {
 .stash-function-buttons {
   text-align: center;
 }
+
+#stash-show-modal-body {
+  display: flex;
+  flex-direction: column;
+  padding: 14px;
+}
+
+.plus {
+  color: green;
+}
+
+.minus {
+  color: red;
+}
+
 /* Stash-functions END */
